--- a/css/screen.css
+++ b/css/screen.css
@@ -1,45 +1,16 @@
-img {
-  border: 0;
-  -ms-interpolation-mode: bicubic; }
-
-.wrapper {
-  padding: 0 0.75em;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
-
-@media screen and (min-width: 640px) {
-  body #container {
-    width: 600px;
-    margin: 0 auto; } }
-body #footer {
-  clear: both; }
 body {
-  /* 16px / 24px */
-  font-size: 1em;
-  line-height: 1.5em;
-  color: #464451;
-  font-family: Helvetica, sans-serif;
-  font-weight: 400;
-  font-style: normal; }
-  @media screen and (min-width: 640px) {
-    body {
-      font-size: 1.1em; } }
-      
-a {
-  color: #00baff;
-  border-bottom: 1px dotted #00baff;
-  text-decoration: none; }
-  a:visited {
-    color: #00baff; }
-  a:hover, a:active, a.active, a:hover:visited {
-    color: #49227a;
-    border-color: #49227a; }
-  a:focus {
-    outline: thin dotted; }
-  a:hover, a:active {
-    outline: 0; }
-    
+  font-size: 1em; }
+
 @media screen and (min-width: 320px) {
   body {
-    font-size: 100px; } }
+    font-size: 1.1em; } }
+
+p.some-other-crap {
+  color: red; }
+
+@media screen and (min-width: 640px) {
+  body {
+    font-size: 1.2em; } }
+
+p.more-crap {
+  color: green; }
