--- a/css/screen.css
+++ b/css/screen.css
@@ -3,14 +3,32 @@ body {
 
 @media screen and (min-width: 320px) {
   body {
-    font-size: 1.1em; } }
+    font-size: 1.1em; }
+  body h1 {
+    font-size: 1.5em; } }
 
 p.some-other-crap {
   color: red; }
 
-@media screen and (min-width: 640px) {
-  body {
-    font-size: 1.2em; } }
+@media screen and (min-width: 480px) {
+   .aside-navigation ul li {
+      width: 25%;
+   }
+   .aside-navigation a {
+      margin-bottom: 0;
+   }
+   .aside-navigation.two-menu-navigation ul li {
+      width: 50%;
+   }
+   .aside-navigation.three-menu-navigation ul li {
+      width: 33.33333%;
+   }
+   .aside-navigation.six-menu-navigation ul li {
+      width: 33.33333%;
+   }
+   .aside-navigation.six-menu-navigation a {
+      margin-bottom: 1px;
+   }}
 
 p.more-crap {
   color: green; }
